# hex-sdk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: buildType.cmake  compiler.cmake  constants.cmake  platform.cmake
core/: CMakeLists.txt
core/private/app/: BaseApplication.cpp
core/private/async/: BaseMutex.cpp  MutexFactory.cpp
core/private/ecs/systems/: BaseSystem.cpp
core/private/game/: Game.cpp
core/private/memory/: DefaultMemory.cpp  MemoryBlock.cpp  MemoryManager.cpp  SharedPointer.cpp  SimplePointer.hpp
core/private/metrics/: Log.cpp
core/public/app/: ApplicationManager.hpp  BaseApplication.hpp  IApplication.hxx
core/public/async/: BaseMutex.hpp  IMutex.hxx  IMutexFactory.hxx  MutexFactory.hpp
core/public/cfg/: hex_api.hpp  hex_assert.hpp  hex_atomic.hpp  hex_debug.hpp  hex_memory.hpp  hex_mutex.hpp  hex_numeric.hpp  hex_platform.hpp  hex_vector.hpp
core/public/ecs/systems/: BaseSystem.hpp  ISystem.hxx
core/public/engine/: IEngine.hxx
core/public/game/: Game.hpp
core/public/memory/: DefaultMemory.hpp  IMemoryManager.hxx  MemoryBlock.hpp  MemoryManager.hpp  SharedPointer.hpp
core/public/metrics/: ELogLevel.hpp  ILog.hxx  Log.hpp
windows/: CMakeLists.txt
windows/private/app/: WinApp.cpp
windows/private/async/: WinMutex.cpp  WinMutexFactory.cpp
windows/private/metrics/: WinLog.cpp
windows/public/app/: WinApp.hpp
windows/public/async/: WinMutex.hpp  WinMutexFactory.hpp
windows/public/metrics/: WinLog.hpp
